juan-developer/proyectos/ptaller/deploy/kubernetes/deploy-webtaller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: webtaller-deployment
 namespace: proyectotaller
spec:
 replicas: 3
 selector:
   matchLabels:
     app: webtaller
 template:
   metadata:
     labels:
       app: webtaller
   spec:
     containers:
       - name: webtaller
         image: juanalonso24/prueba-ptaller:1.0
         # imagePullPolicy: Never
         ports:
           - containerPort: 80
