juan-developer/proyectos/ptaller/deploy/kubernetes/ingress-webtaller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtaller-ingress
  namespace: proyectotaller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webtaller.franparra.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webtaller-service
            port:
              number: 80
